fixed arrow not showing up

--- a/style.css
+++ b/style.css
@@ -1,133 +1,136 @@
 html {
-    font-family:'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .nav {
-    background-color: lightgrey;
-    text-align: center;
+  background-color: lightgrey;
+  text-align: center;
 }
 
 .nav li {
-    list-style-type: none;
-    display: inline;
-    margin-left: 15px;
-    font-size: 20px;
+  list-style-type: none;
+  display: inline;
+  margin-left: 15px;
+  font-size: 20px;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
-    z-index: 1;
+  position: relative;
+  display: inline-block;
+  z-index: 1;
 }
 
 #arrow {
-    display: none;
-    position: absolute;
+  display: none;
+  position: absolute;
 }
 
-.dropdown-content{
-    display: none;
-    position: absolute;
-    z-index: 1;
-    padding-left: 20px;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  padding-left: 20px;
 }
 
 .dropdown-content a {
-    text-decoration: none;
-    display: block;
-    border: 1px solid black;
-    background-color: lightgrey;
+  text-decoration: none;
+  display: block;
+  border: 1px solid black;
+  background-color: lightgrey;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
 
 .dropdown:hover #arrow {
-    display: inline;
-    font-size: 10px;
-    padding-top: 8px;
-    padding-left: 1px;
+  display: inline;
+  font-size: 10px;
+  padding-top: 8px;
+  padding-left: 1px;
 }
 
 .greeting {
-    border-style: solid;
-    border-color: black;
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 20px;
+  border-style: solid;
+  border-color: black;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 .resume {
-    text-align: center;
-    margin-bottom: 30px;
-    margin-top: 30px;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .resume button {
-    border-radius: 8px;
-    transition-duration: 0.2s;
-    margin-bottom: 10px;
-    width: 250px;
-    height: 50px;
-    font-size: 20px;
+  border-radius: 8px;
+  transition-duration: 0.2s;
+  margin-bottom: 10px;
+  width: 250px;
+  height: 50px;
+  font-size: 20px;
 }
 
 .resume button:hover {
-    background-color: #59C063;
-    color: white;
+  background-color: #59c063;
+  color: white;
 }
 
 .contact {
-    font-size: 30px;
-    text-align: center;
-    height: 50px;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
+  font-size: 30px;
+  text-align: center;
+  height: 50px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  /* border-top: 2px solid black;
+  padding-top: 10px; */
 }
 
 .cci img {
-    height: 250px;
-    width: auto;
+  height: 250px;
+  width: auto;
 }
 
 .racc img {
-    height: 250px;
-    width: auto;
+  height: 250px;
+  width: auto;
 }
 
 .drexel {
-    float: left;
-    padding-left: 20px;
-    border: 2px solid black;
-    padding-right: 10px;
+  float: left;
+  padding-left: 20px;
+  border: 2px solid black;
+  padding-right: 10px;
+  padding-bottom: 187px;
 }
 
 .racc {
-    float: right;
-    padding-right: 20px;
-    border: 2px solid black;
-    padding-left: 20px;
+  float: right;
+  padding-right: 20px;
+  border: 2px solid black;
+  padding-left: 20px;
 }
 
 .jobs h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .internships h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .volunteer h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .skills h2 {
-    text-align: center;
+  text-align: center;
 }
